# im-meetcomponentenregister

./: justfile  pyproject.toml
.github/workflows/: release_major_version.yml  release_minor_version.yml  release_patch_version.yml
documentation/: antora.yml
v0/: antora.yml
v0/modules/ROOT/: nav.adoc
v0/modules/ROOT/pages/: index.adoc
v0/modules/ontology/attachments/: model.linkml.yml
v0/modules/ontology/pages/: index.adoc
